--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 POSTGRES_DB=db
 POSTGRES_USER=root
 POSTGRES_PASSWORD=1234
-POSTGRES_HOST=admin-db
+POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
 API_PORT=8000
