--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 django = "^5.1.2"
 punq = "^0.7.0"
 django-rest-framework = "^0.1.0"
+django-environ = "^0.11.2"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
